--- a/eres/templates/inscripcion.html
+++ b/eres/templates/inscripcion.html
@@ -9,12 +9,14 @@
     
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/inscripcion.css" %}" />
     <link rel="stylesheet" type="text/css" media="screen" href="{% static "css/titular.css" %}" />
-
+    <link rel="stylesheet" href="{% static "css/menu1.css" %}">
 
     <script src="{% static "js/all.min.js" %}"></script>
 </head>
 <body>
     
+        {% include "menuperfil.html" %}
+
     <div class="contenedor">
         <div class="titular">
             <div class="nombre-destacamento">
