--- a/eres/templates/landing2.html
+++ b/eres/templates/landing2.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Home</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#7486eb"/>
+    <meta name="theme-color" content="#0081c6"/>
 
       {% load static from staticfiles %}
 
@@ -124,6 +124,7 @@
         </div>
     </section>
 
+    {% include "footer.html" %}
 
 
 
