--- a/eres/templates/menuperfil.html
+++ b/eres/templates/menuperfil.html
@@ -5,7 +5,7 @@
                       <li><a href="{% url "perfil" %}"><span class="primero"><i class="icon fas fa-user"></i></span> Mis Datos</a></li>
                       <li><a href="{% url "destacamento" %}"><span class="segundo"><i class="icon fas fa-campground"></i></span> Adm. Dest.</a></li>
                       <li><a href="#"><span class="tercero"><i class="icon fas fa-star"></i></span> Favoritos</a></li>
-                      <li><a href="#"><span class="cuarto"><i class="icon fas fa-edit"></i></span> Publicaciones</a></li>
+                      <li><a href="{% url "eventos" %}"><span class="cuarto"><i class="icon fas fa-edit"></i></span> Publicaciones</a></li>
                   </ul>
               </nav>
           </header>
