--- a/eres/static/css/nuevamodal.css
+++ b/eres/static/css/nuevamodal.css
@@ -182,3 +182,47 @@ article{
     width: 100%;
     /*background-color: wheat;*/
 }
+
+
+@media all and (max-width: 800px){
+    .modal1{
+        overflow-y: scroll;
+        overflow-x: hidden;
+        }
+    }
+        
+  @media all and (max-width: 700px){
+
+    .ventana1{
+        margin: 6% auto;
+        display: flex;
+        width: 80%;
+        height: auto;
+    }
+
+    
+    .cerrar1{
+        width: 100%;
+        height: auto;
+        padding: 5px 0px;
+    }
+
+  }
+
+  @media all and (max-width: 550px){
+
+
+  }
+
+  @media all and (max-width: 450px){
+
+    .ventana1{
+        margin: 10% auto;
+    }
+
+  }
+
+  @media all and (max-width: 350px){
+
+
+  }
