--- a/eres/static/css/registrar-destacamento.css
+++ b/eres/static/css/registrar-destacamento.css
@@ -11,7 +11,9 @@
     display: flex;
     justify-content: center;
     align-items: center;
+      width: 100%;
   }
+  
   
   .input{
   display: flex;
@@ -305,4 +307,137 @@
     height: auto;
   }
   
+  
+@media all and (max-width: 600px){
+  .Sign_Up{
+    width: 450px;
+    height: auto;
+  }
+
+  .entrada{
+    height: 40px;
+    width: 350px;
+  }
+
+  .inputs{
+    width: 363px;
+  }
+
+  .div-subir{
+    width: 363px;
+  }
+
+  .input-naci{
+    width: 363px;
+  }
+
+  .guardar{
+    width: 150px;
+  }
+
+}
+
+  @media all and (max-width: 480px){
+
+    .Sign_Up{
+      width: 350px;
+      height: auto;
+      margin-bottom:125px;
+      background-color: rgb(0, 0, 0, 0.5);
+      background-image: none;
+    }
+
+    .entrada{
+      height: 40px;
+      width: 300px;
+      margin: 0px 15px;
+    }
+
+    .inputs{
+      width: 312px;
+    }
+
+    .div-subir{
+      width: 312px;
+    }
+
+    .input-naci{
+      width: 312px;
+    }
+
+    select{
+      width: 70px;
+    }
+
+    .guardar{
+      width: 100px;
+    }
+
+    .textbtn{
+      font-size: 14px;
+    }
+
+    .termins{
+      font-size: 14px;
+    }
+
+    .logito{
+      width: 100px;
+      height: auto;
+    }
+  }
+
+    @media all and (max-width: 390px){
+      .Sign_Up{
+        width: 280px;
+        margin-bottom:125px;
+      background-color: rgb(0, 0, 0, 0.5);
+      background-image: none;
+      }
+
+      .entrada{
+        height: 40px;
+        width: 230px;
+        padding: 0px 5px;
+      }
+
+      .inputs{
+        width: 242px;
+      }
+
+      .div-subir{
+        width: 242px;
+      }
+
+      select{
+        width: 60px;
+        margin: 5px 10px 0px 0px;
+        font-size: 12px;
+      }
+
+      .input-naci{
+        width: 242px;
+      }
+
+      .textbtn{
+        font-size: 14px;
+      }
+
+  .termins{
+     font-size: 12px;
+  }
+
+  #coords{
+    width: 230px;
+    font-size: 11px;
+  }
+
+  .texto-mapa{
+    font-size: 12px;
+  }
+
+  .texto-mapa-posicion{
+    font-size: 12px;
+  }
+}
  
