--- a/eres/templates/Sign_Up.html
+++ b/eres/templates/Sign_Up.html
@@ -6,10 +6,8 @@
     <meta name="viewport" content="initial-scale=1">
     {% load static from staticfiles %}
 
-
-    <link rel="stylesheet" href="{% static "css/Sign_Up.css" %}">
-    <script src="{% static "js/all.min.js" %}"></script>
     <script src="{% static "js/jquery-3.2.1.min.js" %}" charset="utf-8"></script>
+    <script src="{% static "js/all.min.js" %}"></script>
     <style>
 
       body{
@@ -22,13 +20,6 @@
     background-position:50% 50%;
     background-color:white;
     background-size: cover;
-}
-
-.container{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-    width: 100%;
 }
 
 .Sign_Up{
@@ -50,145 +41,18 @@
    padding: 10px 5px;
 }
 
-@media all and (max-width: 600px){
-  .Sign_Up{
-    width: 450px;
-    height: auto;
-  }
-
-  .entrada{
-    height: 40px;
-    width: 350px;
-  }
-
-  .inputs{
-    width: 363px;
-  }
-
-  .div-subir{
-    width: 363px;
-  }
-
-  .input-naci{
-    width: 363px;
-  }
-
-  .guardar{
-    width: 150px;
-  }
-
-}
-
-  @media all and (max-width: 480px){
-
-    .Sign_Up{
-      width: 350px;
-      height: auto;
-    background-color: rgb(0, 0, 0,0.5);
-    background-image: none;
-    }
-
-    .entrada{
-      height: 40px;
-      width: 300px;
-    }
-
-    .inputs{
-      width: 312px;
-    }
-
-    .div-subir{
-      width: 312px;
-    }
-
-    .input-naci{
-      width: 312px;
-    }
-
-    select{
-      width: 70px;
-    }
-
-    .guardar{
-      width: 100px;
-    }
-
-    .textbtn{
-      font-size: 14px;
-    }
-
-    .termins{
-      font-size: 14px;
-    }
-
-    .logito{
-      width: 100px;
-      height: auto;
-    }
-  }
-
-    @media all and (max-width: 390px){
-      .Sign_Up{
-        width: 280px;
-        height: auto;
-      background-color: rgb(0, 0, 0,0.5);
-      background-image: none;
-      }
-
-      .entrada{
-        height: 40px;
-        width: 230px;
-      }
-
-      .inputs{
-        width: 242px;
-      }
-
-      .div-subir{
-        width: 242px;
-      }
-
-      select{
-        width: 60px;
-        margin: 5px 10px 0px 0px;
-        font-size: 12px;
-      }
-
-      .input-naci{
-        width: 242px;
-      }
-
-      .textbtn{
-        font-size: 14px;
-      }
-
-  .termins{
-     font-size: 12px;
-  }
-
-  #coords{
-    width: 230px;
-    font-size: 11px;
-  }
-
-  .texto-mapa{
-    font-size: 12px;
-  }
-
-  .texto-mapa-posicion{
-    font-size: 12px;
-  }
-}
-
 </style>
+
+<link rel="stylesheet" href="{% static "css/Sign_Up.css" %}">
 
   </head>
   <body>
+    
     <div class="container">
       <form class="Sign_Up" enctype="multipart/form-data"  method="post">
         {% csrf_token %}
         <div class="head">
-          <img class="logito" src="static/imagenes/eres.png" alt="">
+          <img class="logito" src="{% static "/imagenes/eres.png" %}" alt="">
         </div>
 
 
