--- a/eres/templates/registro_perfil.html
+++ b/eres/templates/registro_perfil.html
@@ -13,7 +13,7 @@
     <div class="container">
       <form class="Sign_Up" action="index.html" method="post">
         <div class="head">
-          <i class="fa fa-4x fa-user-plus" aria-hidden="true"></i>
+          <i class="fa fa-4x fa-user-plus" aria-hidden="false"></i>
         </div>
         <div class="input">
           <label class="titulosinput">Nombres</label>
