--- a/eres/static/css/landing1.css
+++ b/eres/static/css/landing1.css
@@ -50,11 +50,11 @@ body{
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    width: 60%;
+    width: 50%;
     height: auto;
     /*border: solid 1px black;*/
     margin: 10px 10px;
-    background-color: none;
+    background-color: rgba(223, 221, 221, 0.2);
     border-radius: 8px;
     padding: 5px 0px;
 }
@@ -86,7 +86,7 @@ body{
 
 .fecha{
     font-size: 13px;
-    font-weight: 500;
+    font-weight: 400;
     margin: 0px 8px;
     color: #0081c6;
 }
@@ -157,6 +157,7 @@ body{
     text-align: left;
     font-weight: 300;
     font-size: 14px;
+    display: flex;
 }
 
 .iconos-comentarios{
@@ -271,35 +272,7 @@ body{
     justify-content: center;
 }
 
-.div-file{
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background: #0081c6;
-    border-radius: 5px;
-    border: none;
-    width: 100px;
-    height: auto;
-    padding: 6px 6px;
-    cursor: pointer;
-    margin: 5px 0px;
-    margin-left: 5px;
-    font-size: 16px;
-    font-weight: 500;
-    color: white;
-}
 
-#subir-imagen{
-    position: absolute; 
-    top: 0px;
-    left: 0px;
-    right: 0px;
-    bottom: 0px;
-    width: 100%;
-    height: 100%;  
-    overflow:hidden;
-}
 
 @media all and (max-width: 1350px){
 
