--- a/eres/static/css/nuevamodal.css
+++ b/eres/static/css/nuevamodal.css
@@ -15,7 +15,7 @@
     align-items: center;
     flex-direction: column;
     width: 600px;
-    height: 400px;
+    height: auto;
     background-color: white;
     border-radius: 8px;
 }
@@ -60,7 +60,7 @@
     align-items: center;
     justify-content: center;
     align-self: flex-start;
-    width: 240px;
+    width: auto;
     height: auto;
     /*background: #363636;*/
     background: #46cdcf;
@@ -72,7 +72,8 @@
 .tablas li a{
     width: 120px;
     height: 100%;
-    padding: 6px 0;
+    height: auto;
+    padding: 6px 4px;
     color: white;
     text-decoration: none;
     font-size: 16px;
@@ -101,19 +102,19 @@
 
 .tab1{
     border-top-left-radius: 10px;
-    height: auto;
+    border-top-right-radius: 10px;
 }
 
 .secciones{
     width: 100%;
-    height: auto;
+    height: 100%;
     /*background: tomato;*/
 }
 
 .tab2{
     border-top-right-radius: 10px;
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 
 article{
@@ -183,6 +184,36 @@ article{
     /*background-color: wheat;*/
 }
 
+.div-file{
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #0081c6;
+    border-radius: 5px;
+    border: none;
+    width: 100px;
+    height: auto;
+    padding: 6px 6px;
+    cursor: pointer;
+    margin: 5px 0px;
+    margin-left: 5px;
+    font-size: 16px;
+    font-weight: 500;
+    color: white;
+}
+
+#subir-imagen{
+    position: absolute; 
+    top: 0px;
+    left: 0px;
+    right: 0px;
+    bottom: 0px;
+    width: 100%;
+    height: 100%;  
+    cursor: pointer;
+}
+
 
 @media all and (max-width: 800px){
     .modal1{
@@ -211,6 +242,38 @@ article{
 
   @media all and (max-width: 550px){
 
+    .div-file{
+        width: 100px;
+        height: auto;
+        padding: 6px 6px;
+        margin: 5px 0px;
+        margin-left: 5px;
+        font-size: 14px;
+    }
+
+    .botoncito{
+        width: 100px;
+        height: auto;
+        padding: 6px 6px;
+        margin: 5px 0px;
+        margin-left: 5px;
+        font-size: 14px;
+    }
+
+    .tablas li a{
+        width: 110px;
+        height: 100%;
+        height: auto;
+        padding: 6px 4px;
+        color: white;
+        text-decoration: none;
+        font-size: 14px;
+    }
+
+    #inputpubli1::placeholder{
+        font-size: 13px;
+    }
+
 
   }
 
@@ -224,5 +287,31 @@ article{
 
   @media all and (max-width: 350px){
 
+    .div-file{
+        width: 80px;
+        height: auto;
+        padding: 4px 4px;
+        margin: 5px 0px;
+        margin-left: 3px;
+        font-size: 13px;
+    }
 
+    .botoncito{
+        width: 80px;
+        height: auto;
+        padding: 4px 4px;
+        margin: 5px 0px;
+        margin-left: 3px;
+        font-size: 13px;
+    }
+
+    .tablas li a{
+        width: 100px;
+        height: 100%;
+        height: auto;
+        padding: 6px 2px;
+        color: white;
+        text-decoration: none;
+        font-size: 13px;
+    }
   }
